...
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonMainAdcionaGlicemia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="68dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
...
